<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/SongListFragment"
        android:icon="@drawable/selector_menu_song_list"
        android:title="@string/content_menu_song_list" />
    <item
        android:id="@+id/WalletFragment"
        android:icon="@drawable/selector_menu_wallet"
        android:title="@string/content_menu_wallet" />

    <item
        android:id="@+id/blank"
        android:title=""
        android:enabled="false"/>
    <item
        android:id="@+id/MarketFragment"
        android:icon="@drawable/selector_menu_market"
        android:title="@string/content_menu_market" />
    <item
        android:id="@+id/ProfileFragment"
        android:icon="@drawable/selector_menu_profile"
        android:title="@string/content_menu_profile" />
</menu>