<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/image_arrow_left"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_mypage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gmarket_sans_bold"
            android:text="@string/title_mypage"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_back" />

        <TextView
            android:id="@+id/tv_title_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="62dp"
            android:fontFamily="@font/gmarket_sans_bold"
            android:text="@string/title_favorite_song"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_mypage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="21dp"
            android:fontFamily="@font/gmarket_sans_medium"
            android:text="@string/content_show_entire"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title_favorite" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorite"
            android:layout_width="0dp"
            android:layout_height="145dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@id/tv_title_favorite"
            app:layout_constraintTop_toBottomOf="@id/tv_title_favorite"
            tools:listitem="@layout/item_mypage_song" />

        <TextView
            android:id="@+id/tv_title_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/gmarket_sans_bold"
            android:text="@string/title_history"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/rv_favorite"
            app:layout_constraintTop_toBottomOf="@id/rv_favorite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="21dp"
            android:fontFamily="@font/gmarket_sans_medium"
            android:text="@string/content_show_entire"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title_history" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_history"
            android:layout_width="0dp"
            android:layout_height="145dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@id/tv_title_history"
            app:layout_constraintTop_toBottomOf="@id/tv_title_history"
            tools:listitem="@layout/item_mypage_song" />

        <TextView
            android:id="@+id/tv_coupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_rect_nero_radius10"
            android:fontFamily="@font/gmarket_sans_medium"
            android:gravity="center"
            android:paddingVertical="13dp"
            android:text="@string/content_coupon"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tv_logout" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/bg_rect_nero_radius10"
            android:fontFamily="@font/gmarket_sans_medium"
            android:gravity="center"
            android:paddingVertical="13dp"
            android:text="@string/content_logout"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>